--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
     <main class="container">
         <div class="btns">
             
-            <button class="btn btn-tree">Arbre de Pythagore <span class="info">🛈</span></button>
-            <button class="btn btn-fractal-tree">Arbre fractal<span class="info">🛈</span></button>
-            <button class="btn btn-sierp">Triangle de Sierpiensky <span class="info">🛈</span></button>
-            <button class="btn btn-newton">Fractale de Newton <span class="info">🛈</span></button>
+            <button class="btn btn-tree">Arbre de Pythagore <span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span>
+            <button class="btn btn-fractal-tree">Arbre fractal<span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
+            <button class="btn btn-sierp">Triangle de Sierpiensky <span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
+            <button class="btn btn-newton">Fractale de Newton <span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
             <input type="range" id="newton-slider" name="newton" min="3" max="10" value="3" step="1">
             <label class="label-slider" for="newton">Degré du polynôme : <span class="input-val">3</span></label>
-            <button class="btn btn-fern">Fougère de Barnsley <span class="info">🛈</span></button>
-            <button class="btn btn-fern2">Fougère de Barnsley - 2 <span class="info">🛈</span></button>
-            <button class="btn btn-levy">Courbe de Levy<span class="info">🛈</span></button>
-            <button class="btn btn-dragon">Courbe du dragon<span class="info">🛈</span></button>
+            <button class="btn btn-fern">Fougère de Barnsley <span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
+            <button class="btn btn-fern2">Fougère de Barnsley - 2 <span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
+            <button class="btn btn-levy">Courbe de Levy<span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
+            <button class="btn btn-dragon">Courbe du dragon<span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
         </div>
         <div class="infos">
             <p class="waitingMsg">Patientez quelques instants SVP...</p>
