--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <span class="close">&times;</span>
-            <h2 class="modal-title"></h2>
+            <h3 class="modal-title"></h3>
           </div>
           <div class="modal-body">
             <p class="modal-text"></p>
@@ -72,7 +72,7 @@
 
         
     </main>
-  <footer> C.V. 2022 </footer>
+  <footer id="footer"> Céline V. - 2022 </footer>
 </body>
 
 </html>
