--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
     <main class="container">
         <div class="btns">
             
-            <button class="btn btn-tree"><a href="#defaultCanvas0"> Arbre de Pythagore </a><span class="info info-pythagore"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span>
-            <button class="btn btn-fractal-tree"><a href="#defaultCanvas0">Arbre fractal</a><span class="info info-tree"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
-            <button class="btn btn-sierp"><a href="#defaultCanvas0">Triangle de Sierpiensky </a><span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
-            <button class="btn btn-newton"><a href="#defaultCanvas0">Fractale de Newton </a><span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
+            <a href="#defaultCanvas0"><button class="btn btn-tree"> Arbre de Pythagore <span class="info info-pythagore"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
+            <a href="#defaultCanvas0"><button class="btn btn-fractal-tree">Arbre fractal<span class="info info-tree"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
+            <a href="#defaultCanvas0"><button class="btn btn-sierp">Triangle de Sierpiensky <span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
+            <a href="#defaultCanvas0"><button class="btn btn-newton">Fractale de Newton <span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
             <input type="range" id="newton-slider" name="newton" min="3" max="10" value="3" step="1">
             <label class="label-slider" for="newton">Degré du polynôme : <span class="input-val">3</span></label>
-            <button class="btn btn-fern"><a href="#defaultCanvas0">Fougère de Barnsley </a><span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
-            <button class="btn btn-fern2"><a href="#defaultCanvas0">Fougère de Barnsley - 2 </a><span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
-            <button class="btn btn-levy"><a href="#defaultCanvas0">Courbe de Levy</a><span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
-            <button class="btn btn-dragon"><a href="#defaultCanvas0">Courbe du dragon</a><span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button>
+            <a href="#defaultCanvas0"><button class="btn btn-fern">Fougère de Barnsley<span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
+            <a href="#defaultCanvas0"><button class="btn btn-fern2">Fougère de Barnsley - 2<span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
+            <a href="#defaultCanvas0"><button class="btn btn-levy">Courbe de Levy<span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
+            <a href="#defaultCanvas0"><button class="btn btn-dragon">Courbe du dragon<span class="info"><img src="https://res.cloudinary.com/dhpiuysko/image/upload/e_colorize:100/v1664630846/information-logotype-in-a-circle_xfshgl.png" width="20px" alt=""></span></button></a>
         </div>
         <div class="infos">
             <p class="waitingMsg">Patientez quelques instants SVP...</p>
